# python-sdk

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build.yml  deploy.yml  docs.yml  test-all.yml  test.yml
classify/: index.html
copy_function/: index.html
credentials/: index.html
data_classes/: index.html
delete_label/: index.html
delete_samples/: index.html
docs/: classify.md  copy_function.md  credentials.md  data_classes.md  delete_label.md  delete_samples.md  image_classification.md  image_tags.md  index.md  merge_labels.md  multimodal_classification.md  pretrained.md  quickstart.md  requirements.txt  shared.md  sklearn_analytics.md  tabular_classification.md  tabular_tags.md  text_classification.md  text_tags.md  user.md
image_classification/: index.html
image_tags/: index.html
merge_labels/: index.html
multimodal_classification/: index.html
pretrained/: index.html
quickstart/: index.html
requirements/: developers.txt  program.txt
search/: search_index.json
sklearn_analytics/: index.html
src/nyckel/: __init__.py  auth.py  config.py  data_classes.py  greeter.py  image_processing.py  request_utils.py  utils.py
src/nyckel/functions/: classification.py  pretrained.py  text_classification_function.py  utils.py
src/nyckel/functions/classification/: classification.py  factory.py  function_handler.py  image_classification.py  label_handler.py  sample_handler.py  tabular_classification.py  text_classification.py
src/nyckel/functions/tags/: image_tags.py  tabular_tags.py  tags.py  tags_sample_handler.py  (+3 more)
src/nyckel/orchestration/: README.md  __init__.py  copy_function.py  delete_label.py
stylesheets/: extra.css
tabular_classification/: index.html
tabular_tags/: index.html
tests/: conftest.py  test_copy_function.py  test_delete_label.py  test_duplicates_handling.py  test_field_handler.py  test_greeter.py  test_image_classification_function.py  test_image_decoder.py  test_image_tags_function.py  test_label_handler.py  test_sample_handler.py  test_tabular_classification_function.py  test_tabular_tags_function.py  test_tags_shared.py  test_text_classification_function.py  test_text_tags_function.py  test_white_background.py
text_classification/: index.html
text_tags/: index.html
