[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyckel"]


[project]
name = "nyckel"
version = "0.0.5"
authors = [
  { name="Oscar Beijbom", email="oscar@nyckel.com" },
]
description = "Python package for the Nyckel API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NyckelAI/python-sdk"

